# contextlane

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  README.md  install.ps1  install.sh  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: pypi-publish.yml
docs/: API.md  CITATIONS.md  CLI.md  CLOUD_AUTH.md  EXAMPLES.md  INSTALL.md  MCP.md  MEMORYLANE_SYNC.md  RELEASE.md  SDK.md  SOURCES.md
examples/basic-file-ingestion/: README.md
examples/github-repo-context/: README.md
examples/memorylane-sync/: README.md
examples/url-to-memory/: README.md
python/: README.md  pyproject.toml
python/contextlane/: __init__.py  cli.py  sdk.py
python/contextlane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/contextlane/core/: artifact_store.py  chunker.py  config_store.py  errors.py  export_import.py  extractor.py  file_loader.py  folder_loader.py  github_loader.py  ids.py  memory_records_builder.py  memorylane_sync.py  orchestrator.py  schema.py  search.py  source_detector.py  url_loader.py
python/tests/: test_core.py
scripts/: build.mjs  generate-demo-video.py  test.mjs
skills/contextlane/: SKILL.md
src/: cli.ts  index.ts  mcp.ts  sdk.ts  server.ts
src/core/: artifact-store.ts  auth.ts  chunker.ts  citation-builder.ts  config-store.ts  errors.ts  export-import.ts  extractor.ts  file-loader.ts  folder-loader.ts  github-loader.ts  ids.ts  memory-records-builder.ts  memorylane-sync.ts  orchestrator.ts  pdf-loader.ts  schema.ts  search.ts  source-detector.ts  text-normalizer.ts  url-loader.ts
